Fixed error in the z-indexing of CSPages

--- a/src/styles/CSPage.css
+++ b/src/styles/CSPage.css
@@ -2,7 +2,6 @@
   position: relative;
   min-height: 100vh;
   overflow-x: hidden;
-  z-index: -100;
 }
 
 
